# LiOS

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  USER_GUIDE.md  USER_GUIDE.zh-CN.md  cliff.toml  pixi.toml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
benchmark/: README.md  livekit_config_sshtunnel.yaml  two_camera_sender_1fps_ts.py
benchmark/livekit/: cross_lk_latency_bidir.sh  livekit_receiver_ts.py  livekit_sender_ts.py  run_lat.sh
benchmark/livekit/lk_rust/src/: main.rs
benchmark/throughput/: gst_receiver_appsink.py  gst_sender.py
examples/: two_cemera_receiver_inferbuf.py  two_cemera_sender.py
lios-pi/: .gitignore  .pre-commit-config.yaml  AGENTS.md  NOTICE  README.md  README.zh-CN.md  pixi.toml  pyproject.toml
lios-pi/.github/: pull_request_template.md
lios-pi/.github/workflows/: claude-code-review.yml  claude.yml  lint.yaml  test.yaml
lios-pi/assets/pi05_airbot/airbot/: norm_stats.json
lios-pi/docs/: architecture.md  architecture.zh-CN.md  datasets.md  datasets.zh-CN.md  deployment.md  deployment.zh-CN.md  porting-from-openpi.md  porting-from-openpi.zh-CN.md  training.md  training.zh-CN.md
lios-pi/scripts/: convert_lerobot_stats.py  inference.py
lios-pi/scripts/deployment/: action_viewer.ju.py  inference.ipynb  normalizer.py
lios-pi/scripts/train/: batch_compute_norm_stats.sh  compute_norm_stats.py  data_loader.py  profiling.py  run_compute_norm_stats.sh  start_example.sh  train_pytorch_fsdp.py  utils.py
lios-pi/src/pi/: data.py  ema_model.py  inference_buffer_v2.py  transforms.py
lios-pi/src/pi/models/: gemma.py  model.py  pi_config.py  tokenizer.py
lios-pi/src/pi/models/gemma_/: modeling_gemma.py
lios-pi/src/pi/models/paligemma/: modeling_paligemma.py
lios-pi/src/pi/models_pytorch/: attention_pooling.py  gemma_pytorch.py  pi0_pytorch.py  preprocessing_pytorch.py
lios-pi/src/pi/services/: ws_json_api.py
lios-pi/src/pi/shared/: download.py  image_tools.py  normalize.py
lios-pi/src/pi/training/: config.py  instance_config.py  optimizer.py
lios-pi/tests/: test_attention_masks.py  test_data_transforms.py
lios-pi/tests/operator/: test_embed.py
lios-webrtc/: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  USER_GUIDE.md  USER_GUIDE.zh-CN.md  design.md  justfile  pixi.toml
lios-webrtc/benchmark/: cross_p2p_latency_bidir.sh  cross_p2p_sweep.sh  make_figures.py  relat_repeat.sh  two_camera_receiver_inferbuf_1fps_ts.py  two_camera_sender_1fps_ts.py
lios-webrtc/benchmark/livekit/: cloud_pub.sh  livekit_publisher.py  livekit_receiver_ts.py  livekit_sender_ts.py  livekit_subscriber.py  remote_sub.sh  run_lat.sh  run_rust_throughput.sh
lios-webrtc/benchmark/livekit/lk_rust/: Cargo.toml
lios-webrtc/benchmark/rtp_latency/: rtp_latency_receiver.py  rtp_latency_sender.py
lios-webrtc/benchmark/throughput/: common.py  gen_clip.py  gst_receiver.py  gst_receiver_appsink.py  gst_sender.py  gst_sender_clip.py  sweep_gst.sh
lios-webrtc/dockerfiles/: Dockerfile  tsinghua-apt-noble
lios-webrtc/docs/design/: RESTORE_DESIGN.md  gpu-sink.md
lios-webrtc/docs/usage/: gpu-sink.md  inference_buffer_v2.md
lios-webrtc/examples/: two_camera_receiver_inferbuf.py  two_camera_sender.py
lios-webrtc/signal-server/: go.mod  go.sum
lios-webrtc/signal-server/server/: server.go
lios-webrtc/src/gst_webrtc/: inference_buffer_v2.py
lios-webrtc/src/gst_webrtc/gpu_sink/: __init__.py  core.py
lios-webrtc/src/gst_webrtc/receiver/: DESIGN.md  __init__.py  core.py
lios-webrtc/src/gst_webrtc/sender/: __init__.py  core.py
lios-webrtc/src/gst_webrtc/services/: flask_api.py  server_suite.py  (+2 more)
lios-webrtc/tests/: test_gpu_sink.py  test_inference_buffer_v2.py  test_receiver_logic.py  test_sender_logic.py
lios-webrtc/tests/e2e/: appsink_msid_e2e.py  gpu_sink_save.py  inference_buffer_v2_ipc.py  receiver.py  receiver_msid_save.py  sender.py  sender_sw.py  ws_json_e2e.py
signal-server/: main.go
signal-server/cmd/: root.go  serve.go
src/gst_webrtc/: __init__.py
src/gst_webrtc/gpu_sink/: __init__.py  core.py
src/gst_webrtc/sender/: RECONNECT_DESIGN.md  core.py
src/gst_webrtc/services/: __init__.py  flask_api.py  ws_json_api.py
src/gst_webrtc/ws_signal/: __init__.py  signal_client.py
tests/: _fakes.py  test_receiver_logic.py
tests/e2e/: .gitignore  README.md  appsink_msid_e2e.py  gpu_sink.sh  gpu_sink_save.py  inference_buffer_v2_ipc.py  receiver.py  receiver_msid_save.py  sender.py  sender_sw.py  smoke.sh  ws_json_e2e.py
tests/e2e/ipc_two_procs/: run.sh  writer.py
(+7 files in other folders)
